finally fully functional

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Shark API</h1>
-    <input type="text"></input><button>Get Shark</button>
-    <h2>Name:</h2>
-    <script src = "ClientJS/main.js"></script>
+    <input type="text"></input><button>Get Shark info</button>
+    <h2>Enviornment:</h2>
+    <script src = "public/main.js"></script>
 </body>
 </html>
